# random_shit_go_brrrrrrrrr

./: Makefile  README.md  go.mod
cmd/client/: main.go
pkg/decode/: decode.go  decode_test.go
pkg/torrent/: torrent.go
rust_impl/: Cargo.toml
rust_impl/src/: decode.rs  main.rs
